maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:19: error: reassignment to val
      done=done+1
          ^ShortestPathMaze:21: error: not found: value -
        case (getMondeLargeur()-1,getMondeHauteur-1) => 
                               ^ShortestPathMaze:21: error: not found: value getMondeLargeur
        case (getMondeLargeur()-1,getMondeHauteur-1) => 
              ^ShortestPathMaze:21: error: not found: value -
        case (getMondeLargeur()-1,getMondeHauteur-1) => 
                                                 ^