maze.shortestpath.ShortestPathMaze.scala.code
def trouveDonut() : (Int, Int) = {
  var i : Int = 0 
  var j : Int = 0 
  while (!aBiscuit(i,j)){
    if (i==getMondeLargeur()-1){
      i=0
      j=j+1
    }
    i=i+1
  }
  return(i,j)
}

def Cartographie(i:Int, j:Int, done: Int) {
  while(done != (getMondeHauteur()*getMondeLargeur())){
    if (getIndication(i,j)!=9999){
      setIndication(i,j,done)
      done=done+1
      (i,j) match {
        case (getMondeLargeur()-1,getMondeHauteur-1) => 
      }
    }
  }
  
}

override def run() {
  var x : Int = trouveDonut()._1
  var y : Int = trouveDonut()._2
  var done : Int = 0
  Cartographie(x,y,done)
}